1ère section fini

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Rechauffement climatique</title>
 
     <!-- FONT AWESOME -->
-    <script src="https://kit.fontawesome.com/0c87a70838.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <!-- FONT CSS -->
     <link href="//db.onlinewebfonts.com/c/6a17929c7360288d1242981da7712dc3?family=Torus+Notched" 
     rel="stylesheet" 
@@ -18,13 +18,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus autem repellat sunt corrupti enim consectetur quo provident voluptatem ipsam sit dolore, quae dolores facilis atque expedita vitae omnis consequuntur minus nostrum maiores odio quidem mollitia totam ab? Deleniti excepturi reprehenderit neque maiores repudiandae voluptate voluptatem?</p>
+
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="images/logo.png" alt="">
+            </div>
+            <div class="onglet">
+                <ul>
+                    <li><a href="">Accueil</a></li>
+                    <li><a href="">Notre mission</a></li>
+                    <li><a href="">A propos</a></li>
+                    <li><a href="">Faire un don</a></li>
+                </ul>
+            </div>
+            <div class="logo">
+            </div>
+        </div>
+    </header>
+
+
     <div class="sec1">
         <div class="container">
            <h1>Rechauffement <br> climatique</h1> 
-           <a href=""><button>En savoir plus</button>
+           <a href=""><button>En savoir plus <i class="fa-solid fa-arrow-right-long"></i></button>
         </a>
-           
+           <div class="bg-responsive">
+            <img src="images/11.png" alt="">
+           </div>
         </div>
     </div>
 </body>
