--- a/index.html
+++ b/index.html
@@ -48,5 +48,54 @@
            </div>
         </div>
     </div>
+
+
+    <div class="sec2">
+        <div class="container">
+
+            <div class="title">
+                <h1>Notre mission...</h1>
+            </div>
+
+            <div class="content-top">
+                <div class="left">
+                    <div class="titre">
+                        <div class="point"></div>
+                        <h2>"NOUS" SOMMES LA SOLUTION</h2>
+                    </div>
+                        <div class="separateur"></div>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis placeat eius rerum? Quod itaque nulla blanditiis
+                            quos sed esse iste sapiente nam minus, qui cupiditate quis unde et dicta ut laborum voluptatum fugit asperiores
+                            doloribus error corrupti, eligendi nesciunt. Ipsam voluptates mollitia tenetur saepe eveniet facere reiciendis!
+                            Iusto, in nihil.
+                        </p>
+                </div>
+                <div class="right">
+                    <img src="images/4.png" alt="">
+                </div>
+            </div>
+
+            <div class="content-bottom">
+                <div class="left">
+                    <img src="images/4.png" alt="">
+                </div>
+                <div class="right">
+                    <div class="titre">
+                        <div class="point"></div>
+                        <h2>"NOUS" SOMMES LA SOLUTION</h2>
+                    </div>
+                    <div class="separateur"></div>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis placeat eius rerum? Quod itaque nulla blanditiis
+                        quos sed esse iste sapiente nam minus, qui cupiditate quis unde et dicta ut laborum voluptatum fugit asperiores
+                        doloribus error corrupti, eligendi nesciunt. Ipsam voluptates mollitia tenetur saepe eveniet facere reiciendis!
+                        Iusto, in nihil.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
