--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         </div>
     </div>
 
+    <div class="transition">
+        <img src="images/10.png" alt="">
+    </div>
 
     <div class="sec2">
         <div class="container">
@@ -57,7 +60,7 @@
                 <h1>Notre mission...</h1>
             </div>
 
-            <div class="content-top">
+            <div class="content content-top">
                 <div class="left">
                     <div class="titre">
                         <div class="point"></div>
@@ -76,14 +79,14 @@
                 </div>
             </div>
 
-            <div class="content-bottom">
+            <div class="content content-bottom">
                 <div class="left">
-                    <img src="images/4.png" alt="">
+                    <img src="images/6.png" alt="">
                 </div>
                 <div class="right">
                     <div class="titre">
                         <div class="point"></div>
-                        <h2>"NOUS" SOMMES LA SOLUTION</h2>
+                        <h2>PRÉSERVONS LES FONDS</h2>
                     </div>
                     <div class="separateur"></div>
                     <p>
