--- a/index.html
+++ b/index.html
@@ -97,8 +97,29 @@
                     </p>
                 </div>
             </div>
-
         </div>
     </div>
+
+    <section class="sec3">
+        <div class="container">
+            <div class="left">
+                <h1>Des espèces en <br>
+                    voie de disparition</h1>
+                <div class="separateur"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi temporibus explicabo repellat asperiores
+                    dolorum amet voluptatibus sapiente fuga. Rerum, et perferendis est corrupti doloribus quidem nisi labore asperiores
+                    natus possimus, animi aspernatur maxime, rem officia? Quisquam cupiditate rem consequatur.</p>
+                    <a href="">
+                        <button>
+                            En savoir plus <i class="fa-solid fa-arrow-right-long"></i>
+                        </button>
+                    </a>
+            </div>
+
+            <div class="right">
+                <img src="images/2.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
